--- a/style.css
+++ b/style.css
@@ -47,13 +47,13 @@ p {
 }
 
 a {
-    color: #3f84fc;
+    color: gray;
     text-decoration: none;
     background-color: transparent;
 }
 
 a:hover {
-    color: #0458eb;
+    color: gray;
     text-decoration: underline;
 }
 
@@ -601,31 +601,31 @@ h1, .h1 {
   }
 
   .to-do-column .column-header {
-    border-top: 3px solid #cccccc;
-    background: #e2e2e2;
+    border-top: 3px solid #b1b1b1;
+    background:#e3e3e3 ;
     box-shadow: 0px 5px 14px 0px var(--main-color);
     margin-bottom: 25px;
   }
   
   .doing-column .column-header {
-    background: #d1d2ff;
+    background: #dcdcff;
     box-shadow: 0px 5px 14px 0px var(--main-color);
     margin-bottom: 25px;
-    border-top: 3px solid #a6a8ff;
+    border-top: 3px solid #8f91ee;
   }
   
   .done-column .column-header {
-    background: #9fff9f;
+    background: #c4ffc4;
     box-shadow: 0px 5px 14px 0px var(--main-color);
     margin-bottom: 25px;
     border-top: 3px solid #4ec84e;
   }
   
   .onhold-column .column-header {
-    background: #fff199;
+    background: #fff6bb;
     box-shadow: 0px 5px 14px 0px var(--main-color);
     margin-bottom: 25px;
-    border-top: 3px solid #ffdd00;
+    border-top: 3px solid #ffca00;
   }
 
   /* .task-list {
@@ -654,12 +654,13 @@ h1, .h1 {
     -webkit-transition: all 0.3s;
     transition: all 0.3s;
     margin: 1.4rem 0;
-    padding: 10px 15px;
+    padding: 10px 0px 10px 10px;
     height: 5rem;
     border-radius: 10px;
     cursor: move;
     text-align: left;
     box-shadow: 0px 1px 10px 0px var(--primary-color);
+    justify-content: space-between;
   }
 
 /* =================================== */
@@ -711,3 +712,27 @@ h1, .h1 {
 .view-style {
   display: none;
 }
+
+#change-task {
+  display: none;
+}
+
+.detail i {
+  cursor: pointer;
+  padding: 6px 12px;
+}
+
+.task-priority {
+  padding: 0 5px;
+}
+
+.priority-btn{
+  width: 150px;
+
+}
+
+.rate-btn:focus{
+  outline: 0 !important;
+  border: 1px solid var(--second-color);
+}
+
